fixed entry point img and om klubben spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -321,6 +321,10 @@ section img {
   flex-direction: column;
 }
 
+.entry-points img {
+  margin: 0;
+}
+
 .entry-point-om-klubben,
 .entry-point-traening,
 .entry-point-nyheder,
@@ -347,7 +351,7 @@ section img {
 .entry-point-indmeldelse::before {
   content: "";
   position: absolute;
-  top: 50%;
+  bottom: 0;
   left: 0;
   width: 100%;
   height: 125px;
@@ -388,7 +392,7 @@ section img {
   .entry-point-traening::before,
   .entry-point-nyheder::before,
   .entry-point-indmeldelse::before {
-    top: 62%;
+    bottom: 0%;
   }
 
   .entry-point-om-klubben h1,
@@ -1000,8 +1004,16 @@ input[type="checkbox"]:checked+label+p {
     display: flex;
   }
 
-  .social-engagement {
+  .social-engagement, .cheftraener {
     display: flex;
     flex-direction: row;
+    max-width: 80%;
+    margin: 0 auto;
+    align-items: flex-start;
   }
+
+  .social-engagement p, .social-engagement h2, .cheftraener p, .cheftraener h2 {
+    width: 90%;
+  }
+  
 }
